--- a/html/index.html
+++ b/html/index.html
@@ -10,9 +10,10 @@
     <!-- <link rel="stylesheet" type="text/css" href="../css/slideshow.css" /> -->
     <link rel="stylesheet" type="text/css" href="../css/index.css" />
     <link rel="stylesheet" type="text/css" href="../css/font/iconfont.css" />
+    <link rel="stylesheet" type="text/css" href="../css/slide.css" />
+
     <script type="text/javascript" src="../jquery/jquery-3.4.1.js"></script>
-    <style>
-    </style>
+
 </head>
 
 <body>
@@ -113,13 +114,38 @@
                 创建代码
             </button>
         </div>
-        <div class="screen" id="screen">
-            <ul id="ul">
-                <!-- <li><img src="../img/slide1.jpg" width="100%" height="500px" /></li>
-                <li><img src="../img/slide2.gif" width="100%" height="500px" /></li>
-                <li><img src="../img/slide3.jpg" width="100%" height="500px" /></li> -->
-            </ul>
+<!--        <div class="screen" id="screen">-->
+<!--            <ul id="ul">-->
+<!--                &lt;!&ndash; <li><img src="../img/slide1.jpg" width="100%" height="500px" /></li>-->
+<!--                <li><img src="../img/slide2.gif" width="100%" height="500px" /></li>-->
+<!--                <li><img src="../img/slide3.jpg" width="100%" height="500px" /></li> &ndash;&gt;-->
+<!--            </ul>-->
+<!--        </div>-->
+
+        <div id="waibu">
+
+            <div id="banner">
+
+                <ul id="imglist" >
+                    <li><a><img class="slideimg" src="../img/bg1.jpg"/></a></li>
+                    <li><a><img class="slideimg" src="../img/bg2.jpg"/></a></li>
+                    <li><a><img class="slideimg" src="../img/bg3.jpg"/></a></li>
+                    <li><a><img class="slideimg" src="../img/bg4.jpg"/></a></li>
+                    <li><a><img class="slideimg" src="../img/bg1.jpg"/></a></li>
+                </ul>
+
+
+                <ul  id="iconlist">
+                    <li>1</li>
+                    <li>2</li>
+                    <li>3</li>
+                    <li>4</li>
+                </ul>
+
+            </div>
+
         </div>
+
     </div>
 
     <div class="hot" id="hot">
@@ -158,5 +184,6 @@
 <script type="text/javascript" src="../js/page/index.js"></script>
 <script type="text/javascript" src="../js/page/Ajaxfun.js"></script>
 <script type="text/javascript" src="../js/page/fstvlproject2.js"></script>
+<script type="text/javascript" src="../js/slide.js"></script>
 
 </html>
