--- a/html/new2.html
+++ b/html/new2.html
@@ -3,12 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        *{margin: 0px;
+        padding: 0px;
+        }
+        .medium.mdi-action-search {
+            position: fixed;
+            bottom: 60px;
+            right: 20px;
+        }
+    </style>
 </head>
+
 <body>
-<div>
-<div style="height: 150px;text-align: center;line-height: 200px">
-    <a href="new3.html"> <img src="../img/plus-square.png" style="height: 80px;text-align: center;"/></a>
-</div>
+
+<div >
+
+    <div class="medium mdi-action-search" >
+        <a href="new3.html">
+            <img src="../img/plus-square.png" style="width: 60px;height: 60px; "/>
+        </a>
+    </div>
     <div style="height: 30px;background: gainsboro;color: black;opacity:0.5; line-height: 30px">
         <h5 style="font-family: 楷体 ;font-size: 15px">共创建 x 篇文章</h5>
     </div>
@@ -18,7 +33,8 @@
     </div>
 </div>
 </body>
-<script>
-
-</script>
+<!--新建浮框-->
+<script src="../../static/jquery/jquery-1.11.1.min.js"></script>
+<link href="../../static/materialize/css/materialize.min.css" rel="stylesheet">
+<script src="../../static/materialize/js/materialize.min.js"></script>
 </html>
