--- a/html/CntnMainproject.html
+++ b/html/CntnMainproject.html
@@ -47,7 +47,7 @@
 <body>
     <div style="width:95%;height: 100%;margin: 0 auto;margin-top: 30px" id="start">
         <div style="float:right;padding-top: 20px">
-            <a href="index2.html">
+            <a href="index.html">
                 <input type="button" value="返回首页" name="txt"
                     style="text-align: center;background-color: white;border-color: orange;width: 80px;height: 30px;border-radius: 10px">
             </a>
