--- a/html/index.html
+++ b/html/index.html
@@ -104,23 +104,17 @@
         </div>
 
     </div>
+
     <!--轮播-->
     <div class="al" id='al'>
         <div id="title">
             <h1>Code</h1>
             <p>代码接龙、多人协作开发项目</p>
-            <button type="button" class="create">
+            <button type="button" class="create" onclick="location='newproject.html'">
                 <img src="../img/jia.png" width="18px" height="18px" />
                 创建代码
             </button>
         </div>
-<!--        <div class="screen" id="screen">-->
-<!--            <ul id="ul">-->
-<!--                &lt;!&ndash; <li><img src="../img/slide1.jpg" width="100%" height="500px" /></li>-->
-<!--                <li><img src="../img/slide2.gif" width="100%" height="500px" /></li>-->
-<!--                <li><img src="../img/slide3.jpg" width="100%" height="500px" /></li> &ndash;&gt;-->
-<!--            </ul>-->
-<!--        </div>-->
 
         <div id="waibu">
 
@@ -167,7 +161,7 @@
             </li> -->
         </div>
     </div>
-</body>
+
 <script>
     function dowith() {
 
@@ -185,5 +179,8 @@
 <script type="text/javascript" src="../js/page/Ajaxfun.js"></script>
 <script type="text/javascript" src="../js/page/fstvlproject2.js"></script>
 <script type="text/javascript" src="../js/slide.js"></script>
+    <script type="text/javascript" src="../jquery/jquery-3.4.1.js"></script>
 
+
+</body>
 </html>
