--- a/html/joinproject.html
+++ b/html/joinproject.html
@@ -89,9 +89,7 @@
         div11.appendChild(btn1);
         btn1.style = "background: none;border:none;font-family: 楷体;font-size: 18px;"
         btn1.innerHTML = "查看本篇详情";
-        btn1.onclick = function () {
-
-        }
+        btn1.onclick =
 
         document.body.appendChild(div2);
 
