--- a/html/new3.html
+++ b/html/new3.html
@@ -44,7 +44,7 @@ height: 60px;
     }
 </style>
 <body>
-<div class="tit5"><input type="button"value="返回"/></div>
+<div class="tit5"><input type="button"value="返回" onclick="location='new2.html'"/></div>
 <div   class="tit5" style="position: relative">
 <!--    <div style="height: 150px;width:150px">-->
 <!--        <a href="">-->
@@ -59,17 +59,17 @@ height: 60px;
         <div class="tit1">描述:</div>
         <div class="tit2"> <input  class="tit3" type="text" value="请您尽可能详细的描述您要完成的功能"></div>
     </div>
-    <div style="height: 300px;width: 80%">
-        <div class="tit1">代码编写:</div>
-        <div style="height: 300px;width:82%;background:#afd9ee;position: relative;float: right">此处由创建者编写编码,控件不明</div>
-    </div>
-    <div style="position: relative;margin: 0 auto;width: 100%"></div>
+<!--    <div style="height: 300px;width: 80%">-->
+<!--        <div class="tit1">代码编写:</div>-->
+<!--        <div style="height: 300px;width:82%;background:#afd9ee;position: relative;float: right">此处由创建者编写编码,控件不明</div>-->
+<!--    </div>-->
+<!--    <div style="position: relative;margin: 0 auto;width: 100%"></div>-->
 
 
 </div>
 <div style="height: 300px;width: 80%;margin-top: 10px">
     <div style="width:82%;position: relative;float: right;margin: 0 auto">
-        <div style="width:15%;position: relative;float: left;text-align: center "><input type="button" value="发布"/></div>
+        <div style="width:15%;position: relative;float: left;text-align: center "><input type="button" value="代码编写" onclick="location='WriteCode.html'" /></div>
         <div style="width:15%;position: relative;float: left;text-align: center "><input type="button" value="取消"/></div>
     </div>
 </div>
