--- a/html/MyCreateProject.html
+++ b/html/MyCreateProject.html
@@ -112,7 +112,7 @@
 </body>
 <script>
     function mn()
-    { document.getElementById("mn").innerHTML = '<iframe  src="index.html"    data="index.html" width="100%" height="100%" frameborder="no" scrolling="no"></iframe>';}
+    { document.getElementById("mn").innerHTML = '<iframe  src="index.html"    data="index.html" width="100%" frameborder="no" scrolling="no"></iframe>';}
     function p1()
     { document.getElementById("pass").innerHTML = '<iframe  src="PersonInfo.html"    data="PersonInfo.html" width="100%" height="100%" frameborder="no" scrolling="no"></iframe>';}
 
@@ -120,14 +120,28 @@
     { document.getElementById("pass").innerHTML = '<iframe  src="newproject.html"    data="myproject.html" width="100%" height="100%" frameborder="no" scrolling="no"></iframe>';}
 
     function p3()
-    { document.getElementById("pass").innerHTML = '<iframe  src="joinproject.html"    data="joinproject.html" width="100%" height="100%" frameborder="no" scrolling="no"></iframe>';}
+    { document.getElementById("pass").innerHTML = '<iframe  id="iframepage" src="joinproject.html"    data="joinproject.html" width="100%"frameborder="no" scrolling="no"onload="iFrameHeight()"></iframe>';}
 
     function p4()
-    { document.getElementById("pass").innerHTML = '<iframe  src="MyCollection.html"    data="fstvlproject.html" width="100%" height="100%" frameborder="no" scrolling="no"></iframe>';}
+    { document.getElementById("pass").innerHTML = '<iframe  id="iframepage"  src="MyCollection.html"    data="fstvlproject.html" width="100%" height="100%" frameborder="no" scrolling="no"onload="iFrameHeight()"></iframe>';}
 
     function p5()
     { document.getElementById("pass").innerHTML = '<iframe  src="message0.html"    data="message0.html" width="100%" height="100%" frameborder="no" scrolling="no"></iframe>';}
         function t9()
-    {document.getElementById("pass").innerHTML = '<iframe  src="Mybackground.html"    data="Mybackground.html"  width="100%" height="100%" frameborder="no" scrolling="no"></iframe>';}
+    {document.getElementById("pass").innerHTML = '<iframe id="iframepage" src="Mybackground.html"    data="Mybackground.html"  width="100%" frameborder="no" scrolling="no"onload="iFrameHeight()"></iframe>';}
 </script>
+<script>
+    function iFrameHeight() {
+        var ifm= document.getElementById("iframepage");
+        var subWeb = document.frames ? document.frames["iframepage"].document : ifm.contentDocument;
+        console.log(ifm,subWeb)
+        if(ifm != null && subWeb != null) {
+            ifm.height = subWeb.body.scrollHeight+10;
+            ifm.width = subWeb.body.scrollWidth;
+        }
+    }
+</script>
+<script type="text/javascript" src="../jquery/jquery-3.4.1.js"></script>
+
+
 </html>
