--- a/html/joinproject.html
+++ b/html/joinproject.html
@@ -89,7 +89,10 @@
         div11.appendChild(btn1);
         btn1.style = "background: none;border:none;font-family: 楷体;font-size: 18px;"
         btn1.innerHTML = "查看本篇详情";
-        btn1.onclick =
+
+        btn1.onclick=function(){
+            return location='CntnMainproject.html'
+        };
 
         document.body.appendChild(div2);
 
