--- a/html/new2.html
+++ b/html/new2.html
@@ -8,9 +8,9 @@
         padding: 0px;
         }
         .medium.mdi-action-search {
-            position: fixed;
+            /*position: fixed;*/
             bottom: 60px;
-            right: 20px;
+            right: 20px;g'f'
         }
     </style>
 </head>
@@ -21,11 +21,11 @@
 
     <div class="medium mdi-action-search" >
         <a href="new3.html">
-            <img src="../img/plus-square.png" style="width: 60px;height: 60px; "/>
+            <img src="../img/plus-square.png" style="width: 60px;height: 60px; opacity:0.9; z-index: 1;position: fixed"/>
         </a>
     </div>
     <div style="height: 30px;background: gainsboro;color: black;opacity:0.5; line-height: 30px">
-        <h5 style="font-family: 楷体 ;font-size: 15px">共创建 <scan id="page" onload="pages()" >x</scan> 篇文章</h5>
+        <h5 style="font-family: 楷体 ;font-size: 15px">共创建 <scan id="page" >x</scan> 篇文章</h5>
     </div>
     <div style="width: 100%;height: auto";>
         <div id="MyCollection"></div>
