--- a/html/newproject.html
+++ b/html/newproject.html
@@ -32,7 +32,7 @@
             <li class="t" ><a href="https://blog.csdn.net/u014220518/article/details/93622436">Python-爬取淘宝搜索结果 </a></li>
         </ul>
     </div>
-    <div style="width: 150px;height: 100px;margin: 0 auto;"><img  src="../img/logo3.png"style="width: 150px;height: 100px;" /></div>
+    <div id="#select-panel" style="width: 150px;height: 100px;margin: 0 auto;"><img  src="../img/logo3.png"style="width: 150px;height: 100px;" /></div>
 
 
 </div>
@@ -56,5 +56,13 @@
 </script>
 <script type="text/javascript" src="../jquery/jquery-3.4.1.js"></script>
 
+<script>
+    // window.parent.onscroll = window.parent.onresize =  window.onload =function () {
+    //     var oFix_box = document.getElementById('select-panel');
+    //     var oscrollTop = window.parent.document.documentElement.scrollTop || window.parent.document.body.scrollTop;
+    //     oFix_box.style.top = oscrollTop + window.parent.document.documentElement.clientHeight - oFix_box.offsetHeight - 224 + 'px';
+    //     $("#select-panel").stop(true,true).animate({ "top": top1 }, 700);
+    // }
 
+</script>
 </html>
