--- a/html/CntnMainproject.html
+++ b/html/CntnMainproject.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="../css/tk.css"/>
     <style>
         .fg {
             border: 1px gainsboro dashed;
@@ -13,21 +14,18 @@
             padding-top: 5px;
             position: relative;
             height: 50px;
+            width:90% ;
+            margin: 0 auto;
         }
 
         .p2 {
-            width: 30px;
-            height: 30px;
-            border-radius: 90%;
+            width: 30px;height: 30px;border-radius: 90%;
         }
 
         .p3 {
-            width: 20px;
-            height: 20px;
-            float: right;
-            padding-right: 50px;
-            padding-top: 20px;
+            width: 20px;height: 20px;float: right;padding-right: 50px;padding-top: 20px;
         }
+
 
         t {
             float: right;
@@ -35,7 +33,6 @@
             padding-top: 20px;
             color: #bbbbbb;
             font-size: 15px;
-
         }
 
         m {
@@ -44,25 +41,23 @@
     </style>
 </head>
 
-<body>
+<body onload="messages()">
     <div style="width:95%;height: 100%;margin: 0 auto;margin-top: 30px" id="start">
         <div style="float:right;padding-top: 20px">
-            <a href="index.html">
-                <input type="button" value="返回首页" name="txt"
+            <a href="javascript:history.go(-1)">
+                <input type="button" value="返回上一层" name="txt"
                     style="text-align: center;background-color: white;border-color: orange;width: 80px;height: 30px;border-radius: 10px">
             </a>
         </div>
         <div>
             <img src="../img/img1.jpg" style="border-radius: 90px;width: 50px;height: 50px" /><a href="my2.html"
                 style="text-decoration:none;color: black">voctory</a>|2019年7月24日
-            <div style="float: right;color: #bbbbbb;position:relative;width: 200px;padding-top: 20px"> <img
-                    src="../img/fill.png" style="width: 30px;height: 30px;"> 6553
+            <div style="float: right;color: #bbbbbb;position:relative;width: 200px;padding-top: 20px"> <img src="../img/fill.png" style="width: 30px;height: 30px;"> 6553
             </div>
             <hr>
         </div>
-        <p style="font-family: 楷体;font-size:25px;"> 回溯法0-1背包问题怎么解决？</p>
-        <div
-            style="padding-left: 20px;height:60px;width: 90%;margin: 0 auto;margin-top:-15px;color: #bbbbbb;font-size: 20px">
+         <p style="font-size:30px;width: 90%;padding-left:10px;margin: 0 auto;margin-top:10px;font-family:楷体;"> 回溯法0-1背包问题怎么解决？</p>
+        <div  style="padding-left: 20px;height:50px;width: 90%;margin: 0 auto;margin-top:13px;color: #bbbbbb;font-size: 18px">
             项目描述：用一定空间存放尽可能大价值的物品</div>
         <div style="width: 90%;margin: 0 auto">
             <div id="show" style="margin: 0 auto;width:100%;box-shadow: #dcd8d8 5px 5px 15px 1px ;">
@@ -72,110 +67,136 @@
 
             </div>
             <div style="padding-top: 10px">
-                <a href="ConWriteProject.html"> <input type="button" value="续写" style="width: 80px;height:30px;"></a>
-                此处需要弹框提示选择第几层第几段
+<!--                <a href="ConWriteProject.html"> <input type="button" value="续写" style="width: 80px;height:30px;"></a>-->
+<!--                此处需要弹框提示选择第几层第几段-->
+
+                        <div class="add_btn" id="btn_center">
+
+                            <div class="btn_text">
+
+                                <span>续写</span>
+
+                            </div>
+
+                        </div>
+
+<!--                <button id="btn_center"style="width: 80px;height:30px;">续写</button>-->
             </div>
 
             <hr style="background: #dcd8d8">
             <div style="width: 100%;height: 50px;">
-                <div style="width: 50px;height: 40px;float: left;position: relative"> <img
-                        src="../img/微信图片_20190807191205.jpg" style="height: 40px;width: 40px;border-radius: 90%" />
+                <div style="width: 50px;height: 40px;float: left;position: relative"> <img src="../img/微信图片_20190807191205.jpg" style="height: 40px;width: 40px;border-radius: 90%" />
                 </div>
                 <div style="width: 95%;height: 40px;float: left;position: relative; line-height: 40px">
-                    <input type="text" value=" 相对作者说点什么..."
+                    <input type="text" placeholder=" 相对作者说点什么..."
                         style="color: #5e5e5e;border-radius: 5px;border: 1px grey solid;width: 80%;height: 20px" />
                     <button style="background: #cccccc;border-radius: 8px;width: 60px">发表</button>
                 </div>
             </div>
-            <div class="p1">
-                <img src="../img/微信图片_20190807191220.jpg" class="p2" />
-                <m>这是我的评论！！！！</m>
-                <img src="../img/like.png" class="p3">
-                <t> 2019年8月1日</t>
 
-                <hr style="border: 1px gainsboro dashed">
+            <div id="message" class="p1"></div>
+<!--            <div class="p1">-->
+<!--                <img src="../img/微信图片_20190807191220.jpg" class="p2" />-->
+<!--                <m>这是我的评论！！！！</m>-->
+<!--                <img src="../img/like.png" class="p3">-->
+<!--                <t> 2019年8月1日</t>-->
+
+<!--                <hr style="border: 1px gainsboro dashed">-->
+<!--            </div>-->
+            <hr style="border: 1px gainsboro dashed">
+
             </div>
 
-            <div class="p1">
-                <img src="../img/微信图片_20190807191220.jpg" class="p2" />
-                <m>这是我的评论！！！！</m>
-                <img src="../img/like.png" class="p3">
-                <t> 2019年8月1日</t>
 
-                <hr style="border: 1px gainsboro dashed">
-            </div>
-            <div class="p1">
-                <img src="../img/微信图片_20190807191220.jpg" class="p2" />
-                <m>这是我的评论！！！！</m>
-                <img src="../img/like.png" class="p3">
-                <t> 2019年8月1日</t>
-
-                <hr style="border: 1px gainsboro dashed">
-            </div>
-            <div class="p1">
-                <img src="../img/微信图片_20190807191220.jpg" class="p2" />
-                <m>这是我的评论！！！！</m>
-                <img src="../img/like.png" class="p3">
-                <t> 2019年8月1日</t>
-
-                <hr style="border: 1px gainsboro dashed">
-            </div>
-            <div class="p1">
-                <img src="../img/微信图片_20190807191220.jpg" class="p2" />
-                <m>这是我的评论！！！！</m>
-                <img src="../img/like.png" class="p3">
-                <t> 2019年8月1日</t>
-
-                <hr style="border: 1px gainsboro dashed">
-            </div>
-            <div class="p1">
-                <img src="../img/微信图片_20190807191220.jpg" class="p2" />
-                <m>这是我的评论！！！！</m>
-                <img src="../img/like.png" class="p3">
-                <t> 2019年8月1日</t>
-
-                <hr style="border: 1px gainsboro dashed">
-            </div>
-            <div class="p1">
-                <img src="../img/微信图片_20190807191220.jpg" class="p2" />
-                <m>这是我的评论！！！！</m>
-                <img src="../img/like.png" class="p3">
-                <t> 2019年8月1日</t>
-
-                <hr style="border: 1px gainsboro dashed">
-            </div>
-            <div class="p1">
-                <img src="../img/微信图片_20190807191220.jpg" class="p2" />
-                <m>这是我的评论！！！！</m>
-                <img src="../img/like.png" class="p3">
-                <t> 2019年8月1日</t>
-
-                <hr style="border: 1px gainsboro dashed">
-            </div>
-            <div class="p1">
-                <img src="../img/微信图片_20190807191220.jpg" class="p2" />
-                <m>这是我的评论！！！！</m>
-                <img src="../img/like.png" class="p3">
-                <t> 2019年8月1日</t>
-
-                <hr style="border: 1px gainsboro dashed">
-            </div>
-            <div class="p1">
-                <img src="../img/微信图片_20190807191220.jpg" class="p2" />
-                <m>这是我的评论！！！！</m>
-                <img src="../img/like.png" class="p3">
-                <t> 2019年8月1日</t>
-
-                <hr style="border: 1px gainsboro dashed">
-            </div>
-            <div style="text-align: center ;align-content: center;font-family: 楷体">
-                <p> 没有更多了<a href="#start" style="text-decoration:none;">回到顶部</a>
-                    <p>
+<!--            <div style="text-align: center ;align-content: center;font-family: 楷体">-->
+<!--                <p> 没有更多了<a href="#start" style="text-decoration:none;">回到顶部</a>-->
+<!--                    </p>-->
             </div>
 
 
         </div>
     </div>
+
+
+
+
+<!--续写-->
+    <div>
+
+
+
+        <div class="mask"></div>
+
+        <div class="window" id="center">
+
+            <div class="border_add_nav">
+
+                <div> </div>
+
+                <div class="border_add_nav_box flex-container">
+
+                    <span class="add_title">续写</span>
+
+                    <button class="close_btn"><img src="../img/关闭.png" style="height: 10px;width: 10px" /></button>
+
+                </div>
+
+            </div>
+
+            <div class="border_add_main_content">
+
+                <div class="border_add_main_content_box">
+                    <!--            <div>-->
+                    <!--                <div class="name">-->
+                    <!--                    -->
+                    <!--                </div>-->
+                    <!--            </div>-->
+
+                    <span class="name">由于本篇文章由多人进行续写,您可分层进行查看，选择需要层</span>
+                    <!--            <input class="input" style="height: 20px" type="text">-->
+                    <span class="name">当前位于第x层</span>
+                    <p></p>
+                    <span class="name">续写层：
+
+                    <select class="in" id="in">
+
+                        <option value="1">1</option>
+
+                        <option value="2">2</option>
+
+                        <option value="3">3</option>
+
+                        <option value="4">4</option>
+
+                    </select>
+                </span>
+
+
+
+                    <div>
+
+
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="border_add_btn_box">
+
+                <div class="pull-right" style="float:right;padding-top: 5%">
+
+                    <div class="cancel">取消</div>
+
+                    <a class="cancel" href="ConWriteProject.html" style="text-decoration:none" onclick="cntn()">续写</a>
+
+                </div>
+
+            </div>
+
+        </div>
+    </div>
+
+    <script src="../js/tk.js"></script>
 </body>
 <script>
     $(function a() {
@@ -207,6 +228,110 @@
         var grid = document.getElementById("frm");
         window.resizeTo(grid.offsetWidth, grid.offsetHeight)
     }
+
 </script>
+<!--弹框-->
+<script src="../js/page/addjs.js"></script>
+<script type="text/javascript" src="../jquery/jquery-3.4.1.js"></script>
+<script typet="text/javascript" src="http://libs.baidu.com/jquery/1.9.1/jquery.min.js"></script>
+<script type="text/javascript">
+
+    $(window).ready(function () {
+
+        $("#btn_center").click(function () {
+
+            $('.mask').css('display', 'block');
+
+            $('.mask').css('width', $(window).width())
+
+            $('.mask').css('height', $(document).height())
+
+            popCenterWindow();
+
+        });
+
+    });
+
+    //获取窗口的高度
+
+    var windowHeight;
+
+    //获取窗口的宽度
+
+    var windowWidth;
+
+    //获取弹窗的宽度
+
+    var popWidth;
+
+    //获取弹窗高度
+
+    var popHeight;
+
+
+
+    function init() {
+
+        windowHeight = $(window).height();
+
+        windowWidth = $(window).width();
+
+        popHeight = $(".window").height();
+
+        popWidth = $(".window").width();
+        // html.style.overflow="hidden";
+
+    }
+
+    //关闭窗口的方法
+
+    function closeWindow() {
+
+        $(".close_btn").click(function () {
+
+            $('.window').hide("slow");
+
+            $('.mask').css('display', 'none');
+
+        });
+        $(".cancel").click(function () {
+
+            $('.window').hide("slow");
+
+            $('.mask').css('display', 'none');
+
+        });
+
+    }
+
+    //定义弹出居中窗口的方法
+
+    function popCenterWindow() {
+
+        init();
+
+        //计算弹出窗口的左上角X的偏移量
+
+        var popX = (windowWidth - popWidth) / 2;
+
+        // 计算弹出窗口的左上角Y的偏移量为窗口的高度 - 弹窗高度 / 2 + 被卷去的页面的top   + $(document).scrollTop()
+
+        var popY = (windowHeight - popHeight)/2;
+
+        //设定窗口的位置
+
+        $("#center").css("top", popY).css("left", popX).slideToggle("fast");
+
+        closeWindow();
+
+    }
+
+    function op() {
+        document.write()
+
+    }
+
+</script>
+<script src="../js/page/message.js"></script>
 
 </html>
