--- a/html/PersonInfo.html
+++ b/html/PersonInfo.html
@@ -17,9 +17,10 @@
             height: 20%
         }
     </style>
+    <script src="../js/page/addjs.js"></script>
 </head>
 
-<body id="1" >
+<body id="1" onload="Info()" >
 
 <hr style="border: 1px solid;color: orange;margin-top:10px" >
 <!--<div><a target="view_window" onclick="mn()"><input type="button"value="返回首页"></a></div>-->
@@ -37,26 +38,26 @@
         </td>
     </tr>
     <tr>
-        <td>昵称：</td>
-    <td><input type="text" name="txt"/></td>
+        <td >昵称：</td>
+    <td><input id="user"type="text" name="txt"/></td>
     </tr>
     <tr>
-        <td>手机号：</td>
-        <td><input type="text" name="txt"/></td>
+        <td >手机号：</td>
+        <td><input id="tel" type="text" name="txt"/></td>
     </tr>
     <tr>
-    <td>地区：</td>
-    <td><input type="text" name="txt"/></td>
+    <td >地区：</td>
+    <td><input id="area" type="text" name="txt"/></td>
     </tr>
     <tr>
-    <td>生活态度：</td>
-    <td><input type="type" name="txt"/></td></tr>
+    <td >生活态度：</td>
+    <td><input id="lifetu" type="type" name="txt"/></td></tr>
     <tr><td>热爱的语言：</td>
-        <td><select name="fastvl" id="fastvl">
-            <option value="c">C语言</option>
-            <option value="c">Java</option>
-            <option value="c">Basic</option>
-            <option value="c">Python</option>
+        <td><select id="fa" name="fastvl" id="fastvl">
+            <option value="1">C语言</option>
+            <option value="2">Java</option>
+            <option value="3">Basic</option>
+            <option value="4">Python</option>
         </select></td></tr>
 </table>
 </div>
@@ -68,4 +69,5 @@
     function mn()
     { document.getElementById("1").innerHTML = '<iframe  src="index2.html"    data="index2.html" width="100%" height="1000px" frameborder="no" scrolling="no"></iframe>'}
 </script>
+<script type="text/javascript" src="../js/page/addjs.js"></script>
 </html>
