--- a/html/WriteCode.html
+++ b/html/WriteCode.html
@@ -47,7 +47,7 @@ height: 60px;
 <div style="" id="write" ></div>
 <div style="height: 300px;width: 80%;margin-top: 10px">
     <div style="width:82%;position: relative;float: right;margin: 0 auto;">
-        <div style="width:15%;position: relative;float: left;text-align: center "><input type="button" value="发布"/></div>
+        <div style="width:15%;position: relative;float: left;text-align: center "><input type="button"onclick="ycode()" value="发布"/></div>
         <div style="width:15%;position: relative;float: left;text-align: center "><input type="button" value="取消"/></div>
     </div>
 </div>
@@ -67,5 +67,6 @@ height: 60px;
     }
 </script>
 <script type="text/javascript" src="../jquery/jquery-3.4.1.js"></script>
+<script src="../js/page/addjs.js"></script>
 </body>
 </html>
