--- a/html/tankuang.html
+++ b/html/tankuang.html
@@ -223,6 +223,7 @@
 </head>
 
 <body>
+<div>
 
     <div class="add_btn" id="btn_center">
 
@@ -303,6 +304,7 @@
         </div>
 
     </div>
+</div>
     <script type="text/javascript" src="../jquery/jquery-3.4.1.js"></script>
     <script typet="text/javascript" src="http://libs.baidu.com/jquery/1.9.1/jquery.min.js"></script>
     <script type="text/javascript">
