--- a/html/MyCreateProject.html
+++ b/html/MyCreateProject.html
@@ -112,12 +112,12 @@
 </body>
 <script>
     function mn()
-    { document.getElementById("mn").innerHTML = '<iframe  src="index.html"    data="index.html" width="100%" frameborder="no" scrolling="no"></iframe>';}
+    { document.getElementById("mn").innerHTML = '<iframe   id="iframepage" src="index.html"    data="index.html" width="100%" frameborder="no" scrolling="no"></iframe>';}
     function p1()
-    { document.getElementById("pass").innerHTML = '<iframe  src="PersonInfo.html"    data="PersonInfo.html" width="100%" height="100%" frameborder="no" scrolling="no"></iframe>';}
+    { document.getElementById("pass").innerHTML = '<iframe  id="iframepage" src="PersonInfo.html"    data="PersonInfo.html" width="100%" height="100%" frameborder="no" scrolling="no"></iframe>';}
 
     function p2()
-    { document.getElementById("pass").innerHTML = '<iframe  src="newproject.html"    data="myproject.html" width="100%" height="100%" frameborder="no" scrolling="no"></iframe>';}
+    { document.getElementById("pass").innerHTML = '<iframe   id="iframepage" src="newproject.html"    data="myproject.html" width="100%" height="100%" frameborder="no" scrolling="no"></iframe>';}
 
     function p3()
     { document.getElementById("pass").innerHTML = '<iframe  id="iframepage" src="joinproject.html"    data="joinproject.html" width="100%"frameborder="no" scrolling="no"onload="iFrameHeight()"></iframe>';}
