--- a/html/WriteCode.html
+++ b/html/WriteCode.html
@@ -53,7 +53,7 @@ height: 60px;
 </div>
 <script>
     function t()
-    { document.getElementById("write").innerHTML = '<iframe  id="iframepage" src="../ide/index.html"  width="100%" margin="0 auto"  data="../ide/index.html" frameborder="no"onload="iFrameHeight()"></iframe>';}
+    { document.getElementById("write").innerHTML = '<iframe  id="iframepage" src="../ide/index.html"  width="100%" margin="0 auto"  data="../ide/index.html" frameborder="no" scrolling="no"onload="iFrameHeight()"></iframe>';}
 </script>
 <script>
     function iFrameHeight() {
