--- a/html/new2.html
+++ b/html/new2.html
@@ -10,7 +10,7 @@
         .medium.mdi-action-search {
             /*position: fixed;*/
             bottom: 60px;
-            right: 20px;g'f'
+            right: 20px;
         }
     </style>
 </head>
@@ -21,7 +21,7 @@
 
     <div class="medium mdi-action-search" >
         <a href="new3.html">
-            <img src="../img/plus-square.png" style="width: 60px;height: 60px; opacity:0.9; z-index: 1;position: fixed"/>
+            <img src="../img/plus-square.png" style="width: 60px;height: 60px; opacity:0.9; z-index: 22;position: fixed;bottom:0px;right:0"/>
         </a>
     </div>
     <div style="height: 30px;background: gainsboro;color: black;opacity:0.5; line-height: 30px">
