--- a/ide/index.html
+++ b/ide/index.html
@@ -168,7 +168,8 @@
 	// var artext=$("#textarea").val()
 	$(document).ready(function () {
 		$("#bian").click(function () {
-			alert($("#editor").val());
+			alert("qqq")
+			alert($("#editor").innerHTML);
 			console.log($("#editor").val())
 		})
 	})
